--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=3000;
-MONGODB_URL="mongodb+srv://hardikupadhyayknp123:<password>@cluster0.vjbb22g.mongodb.net/Auth-DB"
+# PORT=8080;
+MONGODB_URL="mongodb+srv://hardik:hardik123@cluster0.dkjtbbj.mongodb.net/AuthDB"
 JWT_SECRET=hardiboy
